feat: adiciona captura de pokemons com limite de 6 no time
